tests/NormalTests/paczka1/fuzzy1/41318688.err
Error in line 1: aB1AQ8LQFmN S780 77,4
Error in line 3: XC8dpR S548 41,0
Error in line 7: MWyh6hEs A925 65,9
Error in line 15: I7X7Uy A925 1,2
Error in line 14: A661 S548 109,5
Error in line 17: I7X7Uy A661 35,3
Error in line 36: XC8dpR A925 87,73
Error in line 33: ytRc A925 21,6
Error in line 37: ytRc S548 1,8
